syntax.txt
The following file is an EBNF transcription of the syntax defined in 
Ken Thompson's  "Users' Reference to B"

program = {definition};

definition = (name [constant] [ival [, ival]] ";")
           | (name ([name {, name}]) statement);

ival = constant | name;

statement = ("auto" name [constant] {, name [constant]} ";" statement)
          | ("extrn" name {, name} ";" statement)
          | (name : statement)
          | ("case" constant : statement)
          | ("{" {statement} "}")
          | ("if" "(" rvalue ")" statement ["else" statement] )
          | ("while" "(" rvalue ")" statement)
          | ("switch" rvalue statement)
          | ("goto" rvalue)
          | ("return" ["(" rvalue ")"] ";")
          | ([rvalue] ";");

rvalue = "(" rvalue ")"
       | lvalue
       | constant
       | (lvalue asign rvalue)
       | (inc-dec lvalue)
       | (lvalue inc-dec)
       | (unary rvalue)
       | ("&" lvalue)
       | (rvalue binary rvalue)
       | (rvalue "?" rvalue ":" rvalue)
       | (rvalue "(" [rvalue {, rvalue}] ")");

assign = "=" [binary];

inc-dec = "++" | "--";

unary = "-" | "!";

binary = "|" | "&" | "==" | "!=" | "<" | "<=" | ">" | ">=" | "<<" | ">>" | "-" 
       | "+" | "%" | "*" | "/";

lvalue = name | ("*" rvalue") | (rvalue "[" rvalue "]");

constant = (digit {digit}) | ("'" char [char] "'") | ("\"" {char} "\"");

name = alpha [alpha-digit] [alpha-digit] [alpha-digit] [alpha-digit]
       [alpha-digit] [alpha-digit] [alpha-digit];

alpha-digit = alpha | digit;

alpha = "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L"
      | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X"
      | "Y" | "Z" | "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j"
      | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v"
      | "w" | "x" | "y" | "z" | "_" | "\b";

digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9";
